refactor(memory): repoint call sites and deduplicate math algorithms to spector-core
Repoint upstream modules and deduplicate math and cognitive algorithms per ADR-0033:
- Fix numerical overflow in PolicyInferenceEngine using SoftmaxKernel max-shifted Boltzmann distribution
- Deduplicate Valence in spector-kernel and spector-memory to ValenceMath facade with deprecation
- Deduplicate BanditStats and RunningStats to EmaTracker facade with deprecation
- Delegate WelfordStats to WelfordAccumulator with lock-free atomic updates and isWarm checks
- Replace hardcoded count >= 20 checks with isWarm across DefaultImportanceProvider and ImportanceEstimator
- Delegate HomeostaticCore continuous Euler-Maruyama step to SdeEulerSolver
- Deduplicate scalar cosine similarity across DenseDerivedSparseProvider, SessionWriteBuffer, LateralInhibitionRelay, and EntityDirectory to CosineSimilarity.compute
- Delegate PCA dot product and normalization in VectorSpaceProjectionService to DotProduct and VectorOps
- Replace sigmoid duplicates in EdgeImportance and SurpriseDetector with VectorOps.sigmoid

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>